fix to suggestion group box getting cut off

--- a/src/components/Groups/Group/Member/styles.scss
+++ b/src/components/Groups/Group/Member/styles.scss
@@ -21,7 +21,7 @@
 }
 
 .suggestion-box-nickname {
-  max-width: 60px;
+  max-width: 55px;
   max-height: 18px;
   overflow: hidden;
   text-overflow: ellipsis;
